--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
         <div class="nav">
         <nav>
             <ul id="nav">
-                <li><a href=#>Gmail</a></li>
-                <li><a href=#>Images</a></li>
-                <li><a href=#>Apps</a></li>
+                <li><a class="nav" href=#>Gmail</a></li>
+                <li><a class="nav" href=#>Images</a></li>
+                <li><a class="nav" href=#>Apps</a></li>
                 <li><button id="signin-btn" class="btn">Sign in</button></li>
             </ul>
         </nav></div>
-        
-        <div>
+        <div class="container">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
             <br>
-        <input type="search">
+        <input class="container" type="search">
+        </div>
+        <div class="container">
         <button class="btn">Google Search</button>
         <button class="btn">I'm Feeling Lucky</button>
         </div>
     </div>
         <footer>
             <ul>
+                <li><a href=#>About</a></li>
                 <li><a href=#>Advertising</a></li>
                 <li><a href=#>Business</a></li>
                 <li><a href=#>How Search works</a></li>
+            </ul>
+            <ul>
                 <li><a href=#>Privacy</a></li>
                 <li><a href=#>Terms</a></li>
                 <li><a href=#>Settings</a></li>
